--- a/home.html
+++ b/home.html
@@ -84,7 +84,32 @@
             </form>
         </div>
         <div class="wrapper-signup">
-            <div class="slider-signup-left"></div>
+            <div class="slider-signup-left">
+                <div class="icons card1">
+                    <img src="./home_pic/playing-cards.png" alt="">
+                </div>
+                <div class="icons card2">
+                    <img src="./home_pic/playing-cards.png" alt="">
+                </div>
+                <div class="icons card3">
+                    <img src="./home_pic/playing-cards.png" alt="">
+                </div>
+                <div class="icons card4">
+                    <img src="./home_pic/playing-cards.png" alt="">
+                </div>
+
+                <div class="icons center-group">
+                    <img src="./home_pic/slot-machine.png" alt="">
+                    <img src="./home_pic/dice.png" alt="">
+                    <img src="./home_pic/slot-machine.png" alt="">
+                    <img src="./home_pic/dice.png" alt="">
+                    <img src="./home_pic/playing-cards.png" alt="">
+                    <img src="./home_pic/dice.png" alt="">
+                    <img src="./home_pic/slot-machine.png" alt="">
+                    <img src="./home_pic/dice.png" alt="">
+                    <img src="./home_pic/slot-machine.png" alt="">
+                </div>
+            </div>
             <div class="threeStage"></div>
             <form action="" class="signup">
 
