--- a/home.html
+++ b/home.html
@@ -85,32 +85,34 @@
         </div>
         <div class="wrapper-signup">
             <div class="slider-signup-left">
-                <div class="icons card1">
-                    <img src="./home_pic/playing-cards.png" alt="">
+                <div class="card1">
+                    <img class="icons" src="./home_pic/playing-cards.png" alt="">
                 </div>
                 <div class="icons card2">
-                    <img src="./home_pic/playing-cards.png" alt="">
+                    <img class="icons" src="./home_pic/playing-cards.png" alt="">
                 </div>
                 <div class="icons card3">
-                    <img src="./home_pic/playing-cards.png" alt="">
+                    <img class="icons" src="./home_pic/playing-cards.png" alt="">
                 </div>
                 <div class="icons card4">
-                    <img src="./home_pic/playing-cards.png" alt="">
+                    <img class="icons" src="./home_pic/playing-cards.png" alt="">
                 </div>
 
                 <div class="icons center-group">
-                    <img src="./home_pic/slot-machine.png" alt="">
-                    <img src="./home_pic/dice.png" alt="">
-                    <img src="./home_pic/slot-machine.png" alt="">
-                    <img src="./home_pic/dice.png" alt="">
-                    <img src="./home_pic/playing-cards.png" alt="">
-                    <img src="./home_pic/dice.png" alt="">
-                    <img src="./home_pic/slot-machine.png" alt="">
-                    <img src="./home_pic/dice.png" alt="">
-                    <img src="./home_pic/slot-machine.png" alt="">
+                    <img class="icons machine" src="./home_pic/slot-machine.png" alt="">
+                    <img class="icons die" src="./home_pic/dice.png" alt="">
+                    <img class="icons machine" src="./home_pic/slot-machine.png" alt="">
+                    <img class="icons die" src="./home_pic/dice.png" alt="">
+                    <img class="icons card" src="./home_pic/playing-cards.png" alt="">
+                    <img class="icons die" src="./home_pic/dice.png" alt="">
+                    <img class="icons machine" src="./home_pic/slot-machine.png" alt="">
+                    <img class="icons die" src="./home_pic/dice.png" alt="">
+                    <img class="icons machine" src="./home_pic/slot-machine.png" alt="">
                 </div>
             </div>
-            <div class="threeStage"></div>
+            <div class="divThreeStage">
+                <div class="threeStage"></div>
+            </div>
             <form action="" class="signup">
 
             </form>
