--- a/home.html
+++ b/home.html
@@ -98,7 +98,7 @@
                     <img class="icons" src="./home_pic/playing-cards.png" alt="">
                 </div>
 
-                <div class="icons center-group">
+                <div class="center-group">
                     <img class="icons machine" src="./home_pic/slot-machine.png" alt="">
                     <img class="icons die" src="./home_pic/dice.png" alt="">
                     <img class="icons machine" src="./home_pic/slot-machine.png" alt="">
@@ -110,12 +110,34 @@
                     <img class="icons machine" src="./home_pic/slot-machine.png" alt="">
                 </div>
             </div>
-            <div class="divThreeStage">
-                <div class="threeStage"></div>
-            </div>
-            <form action="" class="signup">
-
-            </form>
+            <section class="form">
+                <div class="divThreeStage">
+                    <div class="threeStage">
+                        <div class="threeStageInside one">1</div>
+                        <div class="threeStageInside two">2</div>
+                        <div class="threeStageInside three">3</div>
+                    </div>
+                </div>
+                <form action="" class="signup">
+                    <h1>Sig Up</h1>
+                    <div class="Stage1">
+                        <input class="input-box inputs" type="text" placeholder="First Name" required>
+                        <input class="input-box inputs" type="text" placeholder="Last Name" required>
+                        <input class="input-box inputs" type="date" placeholder="Date of Birth" required>
+                    </div>
+                    <div class="Stage2">
+                        <input class="input-box inputs" type="text" placeholder="Address" required>
+                        <input class="input-box inputs" type="text" placeholder="Postal Code" required>
+                        <input class="input-box inputs" type="text" placeholder="City/Town" required>
+                        <input class="input-box inputs" type="text" placeholder="Country" required>
+                    </div>
+                    <div class="Stage3">
+                        <input class="input-box inputs" type="email" placeholder="Email Address" required>
+                        <input class="input-box inputs" type="text" placeholder="Username" required>
+                        <input class="input-box inputs" type="password" placeholder="Password" required>
+                    </div>
+                </form>
+            </section>
         </div>
     </div>
     <script src='./js/home.js'>
