--- a/web/diceRoll/diceRoll.html
+++ b/web/diceRoll/diceRoll.html
@@ -5,11 +5,81 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dice Roll</title>
-    <link rel="stylesheet" href="/diceRoll/diceRoll.css">
+    <style>
+        * {
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+        }
+
+        /* body {
+            height: 100vh;
+            background: linear-gradient(darkgreen, lightgreen) 0 100% no-repeat;
+            background-size: 100% 50%;
+        } */
+
+        .container {
+            width: 400px;
+            padding: 50px;
+            border: 1px solid black;
+            position: absolute;
+            transform: translate(-50%, -50%);
+            top: 50%;
+            left: 50%;
+            background-color: white;
+            box-shadow: 0 5px 35px rgba(50, 50, 50, 0.2);
+            border-radius: 8px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            font-family: "Poppins", sans-serif;
+        }
+
+        .dice-wrapper {
+            width: 90%;
+            display: flex;
+            justify-content: space-around;
+        }
+
+        p {
+            font-size: 16px;
+            margin: 30px 0;
+            font-weight: 500;
+        }
+
+        button {
+            background-color: green;
+            border: none;
+            outline: none;
+            color: white;
+            padding: 15px 0;
+            width: 150px;
+            letter-spacing: 1px;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .shake {
+            animation: shake 0.5s infinite;
+        }
+
+        @keyframes shake {
+            0% {
+                transform: rotate(8deg);
+            }
+
+            50% {
+                transform: rotate(-8deg);
+            }
+
+            100% {
+                transform: rotate(8deg);
+            }
+        }
+    </style>
 </head>
 
 <body>
-
     <div class="container">
         <div class="dice-wrapper">
             <img id="die-1">
@@ -19,7 +89,37 @@
         <button onclick="roll()">Roll the Dice</button>
     </div>
 
-    <script src="/diceRoll/diceRoll.js"></script>
+    <script>
+        let imgs = [
+            "dice-01.svg",
+            "dice-02.svg",
+            "dice-03.svg",
+            "dice-04.svg",
+            "dice-05.svg",
+            "dice-06.svg",
+        ];
+
+        let dice = document.querySelectorAll("img");
+
+        function roll() {
+            dice.forEach(function (die) {
+                die.classList.add("shake");
+            });
+            setTimeout(function () {
+                dice.forEach(function (die) {
+                    die.classList.remove("shake");
+                });
+                let dieOneValue = Math.floor(Math.random() * 6);
+                let dieTwoValue = Math.floor(Math.random() * 6);
+                document.querySelector("#die-1").setAttribute("src", "/diceRoll/die/" + imgs[dieOneValue]);
+                document.querySelector("#die-2").setAttribute("src", "/diceRoll/die/" + imgs[dieTwoValue]);
+                document.querySelector("#total").innerHTML = "Your score is " + ((dieOneValue + 1) + (dieTwoValue + 1));
+            }, 1000);
+        }
+
+        //roll();
+    </script>
+
 </body>
 
 </html>
