--- a/web/play_zone.html
+++ b/web/play_zone.html
@@ -56,7 +56,7 @@
                     <p class="balance">Balance:</p>
                     <div class="banks-cards-container">
                         <div class="bankCard bank-card1">
-                            <img class="imgBankCards" src="./play_zone_pic/visa.png" alt="">
+                            <img class="imgBankCards" src="./play_zone_pic/visa.png" alt="" width="105" height="24">
                             <p class="underImgBankCardText">10 &#163;</p>
                         </div>
                         <div class="bankCard bank-card2">
@@ -68,16 +68,91 @@
                             <p class="underImgBankCardText">10 &#163;</p>
                         </div>
                     </div>
-                    <div class="select-amount">
-                        <div class="select-amount-number">10</div>
-                        <div class="select-amount-number">20</div>
-                        <div class="select-amount-number">50</div>
-                        <div class="select-amount-number">100</div>
-                        <div class="select-amount-number">200</div>
-                    </div>
-                    <div class="select-amount-manually"></div>
                 </div>
+                <div class="select-amount">
+                    <div class="select-amount-number san1">10</div>
+                    <div class="select-amount-number san2">20</div>
+                    <div class="select-amount-number san3">50</div>
+                    <div class="select-amount-number san4">100</div>
+                    <div class="select-amount-number san5">200</div>
+                </div>
+                <div class="select-amount-manually"></div>
+                <button class="deposit-btn"></button>
             </div>
+
+
+            <!-- <div class="wrapper">
+                <div class="credit-card" id="card">
+                    <div class="card-front">
+                        <div class="branding">
+                            <img src="./play_zone_pic/chip.png" class="chip-img" />
+                            <img src="./play_zone_pic/visa.png" class="visa-logo" />
+                        </div>
+                        <div class="card-number">
+                            <div>
+                                <span class="card-number-display">_</span>
+                                <span class="card-number-display">_</span>
+                                <span class="card-number-display">_</span>
+                                <span class="card-number-display">_</span>
+                            </div>
+                            <div>
+                                <span class="card-number-display">_</span>
+                                <span class="card-number-display">_</span>
+                                <span class="card-number-display">_</span>
+                                <span class="card-number-display">_</span>
+                            </div>
+                            <div>
+                                <span class="card-number-display">_</span>
+                                <span class="card-number-display">_</span>
+                                <span class="card-number-display">_</span>
+                                <span class="card-number-display">_</span>
+                            </div>
+                            <div>
+                                <span class="card-number-display">_</span>
+                                <span class="card-number-display">_</span>
+                                <span class="card-number-display">_</span>
+                                <span class="card-number-display">_</span>
+                            </div>
+                        </div>
+                        <div class="details">
+                            <div>
+                                <span>Card Holder</span>
+                                <span id="card-holder-name">Your Name Here</span>
+                            </div>
+                            <div>
+                                <span>Expires</span>
+                                <span id="validity">06/28</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-back">
+                        <div class="black-strip"></div>
+                        <div class="white-strip">
+                            <span>CVV</span>
+                            <div id="cvv-display"></div>
+                        </div>
+                        <img src="./play_zone_pic/visa.png" class="visa-logo" />
+                    </div>
+                </div>
+                <form class="credit-card-form">
+                    <label class="labelInput clabel" for="card-number">Card Number</label>
+                    <input class="labelInput cinput" type="number" id="card-number" placeholder="1234123412341234" />
+                    <label class="labelInput clabel" for="card-holder">Card Holder:</label>
+                    <input class="labelInput cinput" type="text" id="card-name-input" placeholder="Your Name" />
+                    <div class="date-cvv">
+                        <div>
+                            <label class="labelInput clabel" for="validity">Expires On:</label>
+                            <input class="labelInput cinput" type="date" id="validity-input" />
+                        </div>
+                        <div>
+                            <label class="labelInput clabel" for="cvv">CVV:</label>
+                            <input class="labelInput cinput" type="number" id="cvv" placeholder="***" />
+                        </div>
+                    </div>
+                </form>
+            </div> -->
+
+
 
 
 
