--- a/web/play_zone.html
+++ b/web/play_zone.html
@@ -81,7 +81,7 @@
             </div>
 
 
-            <!-- <div class="wrapper">
+            <div class="wrapper">
                 <div class="credit-card" id="card">
                     <div class="card-front">
                         <div class="branding">
@@ -150,13 +150,13 @@
                         </div>
                     </div>
                 </form>
-            </div> -->
+            </div>
 
 
 
 
 
-            <form class="form-general" method="get" action="">
+            <form class="form-general" method="post" action="">
 
                 <div class="test">
                     <label class="label" for="email">Email</label>
