--- a/web/blackjack.html
+++ b/web/blackjack.html
@@ -39,7 +39,7 @@
 <body>
     <h2>Dealer: <span id="dealer-sum"></span></h2>
     <div id="dealer-cards">
-        <img id="hidden" src="../deck_of_cards/BACK.png" alt="">
+        <img id="hidden" src="../web/deck_of_cards/BACK.png" alt="">
     </div>
 
     <h2>You: <span id="your-sum"></span></h2>
@@ -115,7 +115,7 @@
             while (dealerSum < 17) {
                 let cardImg = document.createElement("img");
                 let card = deck.pop();
-                cardImg.src = "../deck_of_cards/" + card + ".png";
+                cardImg.src = "../web/deck_of_cards/" + card + ".png";
                 dealerSum += getValue(card);
                 dealerAceCount += checkAce(card);
                 document.getElementById("dealer-cards").append(cardImg);
@@ -125,7 +125,7 @@
             for (let i = 0; i < 2; i++) {
                 let cardImg = document.createElement("img");
                 let card = deck.pop();
-                cardImg.src = "../deck_of_cards/" + card + ".png";
+                cardImg.src = "../web/deck_of_cards/" + card + ".png";
                 yourSum += getValue(card);
                 yourAceCount += checkAce(card);
                 document.getElementById("your-cards").append(cardImg);
@@ -141,7 +141,7 @@
             }
             let cardImg = document.createElement("img");
             let card = deck.pop();
-            cardImg.src = "../deck_of_cards/" + card + ".png";
+            cardImg.src = "../web/deck_of_cards/" + card + ".png";
             yourSum += getValue(card);
             yourAceCount += checkAce(card);
             document.getElementById("your-cards").append(cardImg);
@@ -156,7 +156,7 @@
             yourSum = reduceAce(yourSum, yourAceCount);
 
             canHit = false;
-            document.getElementById("hidden").src = "../deck_of_cards/" + hidden + ".png";
+            document.getElementById("hidden").src = "../web/deck_of_cards/" + hidden + ".png";
 
             let message = "";
             if (yourSum > 21) {
